Merge 2005-07-11 (part 2)
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/cfo-branch@102276 138bc75d-0d04-0410-961f-82ee72b054a4